--- a/public/assets/css/richtext.scss
+++ b/public/assets/css/richtext.scss
@@ -21,7 +21,7 @@
 */
 
 
-$highlight: #3498db;
+$highlight: #F15A24;
 
 .richText {
     position: relative;
@@ -302,7 +302,7 @@ $highlight: #3498db;
 
     .richText-help-popup {
         a {
-            color:#3498db;
+            color:#F15A24;
             text-decoration:underline;
         }
 
