--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,12 +1,16 @@
 /* HEADER FEATURES */
+.wrapper{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	align-items: stretch;
+    align-content: stretch;
+    min-height: 100vh;
+}
 
 .header{
     background-color: #333333;
-    color: white;
-    height: 10%;
-    width: 100%;
-    font-family: 'bebas_neueregular';
-    position: relative;
 }
 
 .headerlogo{
@@ -47,8 +51,6 @@
 
 .body-white{
     position: relative;
-    width: 100%;
-    padding-bottom: 100px;
 }
 
 
@@ -56,12 +58,7 @@
 
 .footer{
     background-color: #333333;
-    color: white;
-    height: 20%;
-    width: 100%;
-    font-family: 'bebas_neueregular';
-    position: absolute;
-    bottom: -300px;
+    margin-top: auto;
 }
 
 .logo-footer{
@@ -83,10 +80,55 @@
     font-style: italic;  
 }
 
-.hexagon{
+.hexagonplatforms{
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    background-color: black;
     width: 150px;
     height: 150px;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: -1;
+}
+
+.hexagonplatforms-img{
+    width: 125px;
+    height: 125px;
+    display: block;
+    margin: auto;
+    background-color: white;
+}
+
+.hexagonprofile{
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    background-color: white;
+    width: 150px;
+    height: 150px;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: -1;
+}
+
+
+.hexagonprofile-img{
+    width: 150px;
+    height: 150px;
+    display: block;
+    margin: auto;
+    background-color: white;
+}
+
+.companyimg{
+    width: 150px;
+    height: auto;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: -1;
 }
 
 
