--- a/templates/application/myapplications.html.twig
+++ b/templates/application/myapplications.html.twig
@@ -8,8 +8,8 @@
         <div class="small-3 medium-3 large-3"></div>
         <div class="small-6 medium-6 large-6">
             <br>
-                <div class="hexagon">
-                    <a href="/userprofile/show/{{user.id}}"><img class="sizedimg" src="{{ user.profilepictureurl }}"></a>
+                <div class="hexagonprofile">
+                    <a href="/userprofile/show/{{user.id}}"><img class="hexagonimages" src="{{ user.profilepictureurl }}"></a>
                 </div>
             </br>
         </div>
@@ -51,5 +51,6 @@
                 </tbody>
             </table><br><br>
         </div>
+    </div>
 {% endblock %}
 
