--- a/templates/user/applicant.html.twig
+++ b/templates/user/applicant.html.twig
@@ -7,8 +7,8 @@
         <div class="small-3 medium-3 large-3">
         </div>
         <div class="small-6 medium-6 large-6">
-            <br><div class="hexagon">
-                <img src="{{ profile.profilepictureurl }}">
+            <br><div class="hexagonprofile">
+                <img class="hexagonprofile-img" src="{{ profile.profilepictureurl }}">
             </div>
         </div>
         <div class="small-3 medium-3 large-3">
@@ -49,7 +49,7 @@
      <div class="grid-x">
         <div class="small-3 medium-3 large-3"> 
             <br><label>Geboortedatum</label>
-            <span class="display">{{ profile.dateofbirth|date('d/m/Y') }}</span>
+            <span class="display">{{ profile.dateofbirth|date('d-m-Y') }}</span>
         </div>
 
         <div class="small-1 medium-1 large-1">
