--- a/templates/user/employer.html.twig
+++ b/templates/user/employer.html.twig
@@ -7,8 +7,8 @@
         <div class="small-3 medium-3 large-3">
         </div>
         <div class="small-6 medium-6 large-6">
-            <br><div class="hexagon">
-                <img src="{{ profile.profilepictureurl }}">
+            <br><div>
+                <img class="companyimg" src="{{ profile.profilepictureurl }}">
             </div>
         </div>
         <div class="small-3 medium-3 large-3">
