--- a/templates/vacancy/editvacancy.html.twig
+++ b/templates/vacancy/editvacancy.html.twig
@@ -16,34 +16,61 @@
 
             
 {% block content %}
-<form action="/vacancy/edit/{{ vacancy.id }}" method="POST">
-    <input type="hidden" name="id" value="{{ user.id }}">
-        <div class="grid-x">
-            <div class="small-12 medium-12 large-12 vacancy-edit">
-                <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Mijn Vacature</h2>
-                    <label>Functienaam</label> 
-                    <input type="text" id="function" name="function" value="{{ vacancy.function }}"/>
+    <form action="/vacancy/update/{{ vacancy.id }}" method="POST">
+        <input type="hidden" name="id" value="{{ user.id }}">
+            <div class="grid-x">
+                <div class="small-12 medium-12 large-12 vacancy-edit">
+                    <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Mijn Vacature</h2>
+                        <label>Functienaam</label> 
+                        <input type="text" id="function" name="function" value="{{ vacancy.function }}"/>
+                </div>
             </div>
-        </div>
 
-        <div class="grid-x">
-            <div class="small-6 medium-6 large-6 vacancy-edit" >
-                <label>Niveau</label> 
-                    <select id="level" name="level" value="{{ vacancy.level }}"/>
-                        <option value="Junior">Junior</option>
-                        <option value="Medior">Medior</option>
-                        <option value="Senior">Senior</option>
-                    </select>
+            <div class="grid-x">
+                <div class="small-12 medium-12 large-12 custom-select-vacancy" >
+                    <br><label>Niveau</label> 
+                        <select class="custom-select-vacancy" id="level" name="level" value="{{ vacancy.level }}"/>
+                            <option class="custom-options-vacancy" value="Junior">Junior</option>
+                            <option class="custom-options-vacancy" value="Medior">Medior</option>
+                            <option class="custom-options-vacancy" value="Senior">Senior</option>
+                        </select>
+                </div>
             </div>
-        </div>
 
-        <div class="grid-x">
-            <div class="small-6 medium-6 large-6 vacancy-edit">
-                <label>Locatie</label> 
+            <div class="grid-x">
+                <div class="small-12 medium-12 large-12 custom-select-vacancy" >
+                    <br><label>Platform</label> 
+                        <select class="custom-select-vacancy" id="platform" name="platform" value="{{ vacancy.platform.name }}"/>
+                            {% for platform in platforms %}
+                            <option class="custom-options-vacancy" value={{ platform.id }}>{{ platform.name }}</option>
+                            {% endfor %}
+                        </select>
+                </div>
+            </div>
+
+            <div class="grid-x">
+                <div class="small-12 medium-12 large-12 vacancy-edit">
+                    <br><label>Locatie</label> 
                     <input type="text" id="location" name="location" value="{{ vacancy.location }}"/>
+                </div>
             </div>
-        </div>
-</form>
 
+            <div class="grid-x">
+                <div class="small-12 medium-12 large-12 vacancy-edit">
+                    <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Omschrijving</h2>
+                    <span><textarea class="content" id="job_description" name="job_description">{{  vacancy.jobdescription }}</textarea></span> 
+                        {# See: https://github.com/webfashionist/RichText/blob/master/examples/fontawesome5.html #}
+                </div>
+            </div>
+            
+            <div class="grid-x">
+                <div class="small-12 medium-12 large-12 orangetext-vacancysave">
+                    <br><button type="submit" id="_submit" name="_submit" class="btn btn-succes, orangetext-vacancysave">
+                    <i class="fas fa-arrow-right"></i> 
+                    <input class="orangetext-vacancysave" type="submit" value="Opslaan" style="border: none; background: none"/>
+                    </button>
+                </div>
+            </div>
+    </form>
 {% endblock %}
 
