--- a/templates/vacancy/employervacancies.html.twig
+++ b/templates/vacancy/employervacancies.html.twig
@@ -47,7 +47,7 @@
     <div class="grid-x">
         <div class="small-12 medium-12 large-12 vacancy-edit">
             <button type="submit" id="_submit" name="_submit" class="btn btn-succes">
-                <a href="/vacancy/add/" class="orangetext-apply">
+                <a href="/vacancy/add/" class="orangetext-addvacancy">
                 <i class="fas fa-arrow-right"></i>  Vacature Toevoegen</a>
             </button>
         </div>
