--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -86,3 +86,12 @@
     background: linear-gradient(359.5deg, rgba(241,90,36,1) 0%, rgba(241,90,36,1) 50%, rgba(171,65,27,1) 51%, rgba(241,90,36,1) 61%, rgba(241,90,36,1) 100%);
 
 }
+
+.hexagon-slideshow{
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    background-color:black;
+    width: 175px;
+    height: 175px;
+  
+}
+
