--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -6,7 +6,6 @@
     <div class="orangebackground">
         <div class="grid-x">
             <div class="small-12 medium-12 large-12">
-                {% for vacancy in vacancies %}
                     <div class="grid-x">
                         <div class="medium-4 large-4">
                             <div class="grid-x">
@@ -14,13 +13,22 @@
                                 </div>
 
                                 <div class="medium-8 large-8">
+                                    <div class="hexagon-slideshow">
+                                        <div class="mainheader">
+                                        </div>
+                                        <div class="subheader">
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div class="medium-2 large-2">
                                 </div>
                             </div>
                         </div>
+                    </div>
 
+                    {% for vacancy in vacancies %}
+                    <div class="grid-x">
                         <div class="small-12 medium-7 large-7">  
                             <div class="grid-x">
                                 <div class="small-4 medium-4 large-4">
@@ -40,7 +48,7 @@
                                 </div>
 
                                 <div class="small-8 medium-8 large-8">
-                                    <br><div class="vacancydatetext">{{ vacancy.vacancydate }}</div>
+                                    <br><br><div class="vacancydatetext">{{ vacancy.vacancydate }}</div>
                                     <a href="/vacancy/show/{{vacancy.id}}" class="functiontext">{{vacancy.function}} voor {{vacancy.user.companyname}}</a>
                                     <div class="descriptiontext">{{ vacancy.jobdescription |striptags|length > 340 ? vacancy.jobdescription|striptags|slice(0, 340) ~ '...' : vacancy.jobdescription|striptags }}</div>
                                 </div>
@@ -60,8 +68,8 @@
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
-                {% endfor %}
             </div>
         </div>
     </div>
