--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -4,14 +4,14 @@
 
 {% block logo %}
     <div class="grid-x">
-        <div class="small-3 medium-3 large-3">
+        <div class=" medium-3 large-3">
         </div>
-        <div class="small-6 medium-6 large-6">
+        <div class=" medium-6 large-6">
             <br><div class="hexagonprofile">
                 <img class="hexagonprofile-img" src="{{ user.profilepictureurl }}">
             </div>
         </div>
-        <div class="small-3 medium-3 large-3">
+        <div class=" medium-3 large-3">
         </div>
     </div>
 {% endblock %}
